set up the blog and ttested the blog. All pages rendered, plus all links are rendered.

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,21 @@
     <title>Sabina's Recipes</title>
 </head>
 <body>
-    <h1>Welcome to Sabina's Food Corner</h1>
+    <h1>
+        <a href="{% url 'homepage' %}">Welcome to Sabina's Food Corner</a>
+    </h1>
+
+    {% if request.user.is_authenticated == True %}
+        <a href="{% url 'logout' %}">logout</a>
+    {% else %}
+        <a href="{% url 'login' %}">login</a> or 
+        <a href="{% url 'sign_up' %}">sign up</a>
+    {% endif %}
+
+    <a href="{% url 'bloginsert' %}">blog here</a>
+    <a href="{% url 'recipe_add' %}">add recipe</a>
+
+    <a href="{% url 'profile' request.user.username %}">profile</a>
 
     {% block body %}
 
