set up the navbar shorcut and added it to both base and generic_forms.html.

--- a/templates/blog_view.html
+++ b/templates/blog_view.html
@@ -9,6 +9,7 @@
 <ul>
     <h3>{{blog.blog_title}} by {{blog.blog_author}}</h3>
     <p>{{blog.blog_body}}</p>
+    <!-- <img src="{{blog.blog_image.url}}" alt="blog_image"> -->
     <p>Posted on {{blog.blog_date}}</p>
 </ul>
 
