--- a/templates/generic_forms.html
+++ b/templates/generic_forms.html
@@ -7,10 +7,10 @@
     <title>Sabina's Recipes</title>
 </head>
 <body>
-    <h1>Welcome to Sabina's Food Corner</h1>
+
+    {% include "navbar.html" %}
 
     {% block form %}
-
 
 
     {% endblock %}
