--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,7 @@
 <p>Foodie: {{profilers.display_name}}</p>
 <p>Username: {{profilers.username}}</p>
 <p>Date Joined: {{profilers.date_joined}}</p>
+<!-- <img src="{{profilers.profile_image.url}}" alt="profile pic"> -->
 
 <h1>Recipe Links</h1>
 
