--- a/templates/recipe_view.html
+++ b/templates/recipe_view.html
@@ -10,7 +10,7 @@
     <p>by {{recipe.food_author}}</p>
     <p>{{recipe.ingredients}}</p>
     <p>{{recipe.directions}}</p>
-    <!-- <img src="{{recipe.food_image.image.url}}" alt="food_image"> -->
+    <img src="{{recipe.food_image.url}}" alt="food_image">
     <p>Posted on {{recipe.food_date}}</p>
 
     {% endfor %}
